[package]
name = "rust-draw"
version = "0.1.0"
authors = ["Jack Stade <jack.stade@gmail.com>"]
edition = '2018'
publis = false
description = "This is a drawing/graphics library for Rust that is intended to be similar in concept to the Processing library for java. The goal is to allow drawing images and polygons with very few lines of code, but to also support more advanced rendering techniques. This library uses opengl as a backend, and may have support for other APIs in the future."
license = "Mit OR Apache"

[dependencies]
gl = "0.6.2"
image = "0.21.0"
parking_lot = "0.7.1"
nalgebra = "0.17.0"

[dependencies.glfw]
version = "0.21.0"
features = ["default", "vulkan"]